--- a/Makefile.in
+++ b/Makefile.in
@@ -20,22 +20,29 @@
 # limitations under the License.
 
 ###
-### Makefile for muforth, a "micro" Forth
+### Makefile.in for muforth, a "micro" Forth
 ###
 
-### 2004-jun-24. daf. Made this file as generic as possible, stripping out
-### all the "web projects" stuff. Now it should compile with BSD make or
-### GNU make.
-
-VERSION=	0.02
+VERSION=	0.03
 
 CFLAGS=		-O2 -Wall -fomit-frame-pointer
 #CFLAGS=		-g -Wall -fomit-frame-pointer -DDEBUG -DBEING_DEFINED
 LDFLAGS=
 
-# If any of these files changes, make a new version.h
-VERSOBJS=	kernel.o interpret.o compile.o dict.o file.o \
+# Core objects
+COREOBJS=	kernel.o interpret.o compile.o dict.o file.o \
 			error.o time.o tty.o select.o i386_lib.o
+
+# Different compilers: native and ITC; uncomment one of these
+.ifdef X86
+COMPOBJ=	compile-i386.o
+CFLAGS+=	-DX86
+.else
+COMPOBJ=	compile-itc.o
+.endif
+
+# If any of these files changes, make a new version.h
+VERSOBJS=	${COREOBJS} ${COMPOBJ}
 
 ALLOBJS=	${VERSOBJS} muforth.o
 DEPFILES=	Makefile muforth.h env.h
@@ -48,7 +55,7 @@ ${ALLOBJS} : ${DEPFILES}
 
 muforth.o : version.h
 
-public.h : ${ALLOBJS:S/.o/.ph/}
+public.h : ${ALLOBJS:.o=.ph}
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	cat ${.ALLSRC}) > ${.TARGET}
@@ -79,7 +86,7 @@ dict.o : forth_chain.h compiler_chain.h
 	@echo Making ${.TARGET}
 	@(echo "/* ${.IMPSRC} */"; \
 	sed -E -n \
-		-e '/^#if 0/q' \
+		-e '/^#if/,/^#endif/d' \
 		-e '/^static /d' \
 		-e 's/^([a-z]+ \**[a-z_0-9]+)\((void)?\).*$$/\1(void);/p' \
 		-e 's/^(pw [a-z_0-9]+).*;$$/extern \1;/p' \
@@ -112,6 +119,7 @@ clean :
 	rm -f muforth version.h *.o *.asm *.ph
 	rm -f public.h forth_chain.h compiler_chain.h
 
+### BSD start ###
 ## For merging changes in other branches into HEAD
 .if defined (BRANCH)
 
@@ -126,3 +134,4 @@ merge ! do_merge syncpoint
 .elif make(syncpoint) || make(do_merge) || make(merge)
 .error You need to define a source BRANCH to merge from.
 .endif
+### BSD end ###
