more config changes; moved sed scripts into scripts/
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@434 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -34,9 +34,9 @@ COREOBJS=	kernel.o interpret.o compile.o dict.o file.o \
 			error.o time.o tty.o select.o i386_lib.o
 
 # Different compilers: native and ITC; uncomment one of these
-.ifdef X86
+.ifdef native
 COMPOBJ=	compile-i386.o
-CFLAGS+=	-DX86
+CFLAGS+=	-Dnative
 .else
 COMPOBJ=	compile-itc.o
 .endif
