More config changes. I think it's final. Now on to getting ITC and native working side-by-side...
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@435 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -60,21 +60,21 @@ public.h : ${ALLOBJS:.o=.ph}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	cat ${.ALLSRC}) > ${.TARGET}
 
-forth_chain.h : public.h gen_dict_chain.sed
+forth_chain.h : public.h scripts/gen_dict_chain.sed
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	sed -E \
 		-e '/^void mu_compiler/d' \
-		-f gen_dict_chain.sed ${.ALLSRC} \
+		-f scripts/gen_dict_chain.sed ${.ALLSRC} \
 	) > ${.TARGET}
 
-compiler_chain.h : public.h gen_dict_chain.sed
+compiler_chain.h : public.h scripts/gen_dict_chain.sed
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	sed -E \
 		-e '/^void mu_compiler/!d' \
 		-e 's/mu_compiler_/mu_/' \
-		-f gen_dict_chain.sed \
+		-f scripts/gen_dict_chain.sed \
 		-e 's/mu_/mu_compiler_/' ${.ALLSRC} \
 	) > ${.TARGET}
 
