Slight improved configure (and correct too - other one called "gmake" instead of "make" ;-), single-length numbers, and no x86 math code!
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@438 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -29,9 +29,11 @@ CFLAGS=		-O2 -Wall -fomit-frame-pointer
 #CFLAGS=		-g -Wall -fomit-frame-pointer -DDEBUG -DBEING_DEFINED
 LDFLAGS=
 
+# Configure options -- do not change this line! It must be matched by sed.
+
 # Core objects
 COREOBJS=	kernel.o interpret.o compile.o dict.o file.o \
-			error.o time.o tty.o select.o i386_lib.o
+			error.o time.o tty.o select.o
 
 # Different compilers: native and ITC; uncomment one of these
 .ifdef native
@@ -90,14 +92,6 @@ dict.o : forth_chain.h compiler_chain.h
 		-e '/^static /d' \
 		-e 's/^([a-z]+ \**[a-z_0-9]+)\((void)?\).*$$/\1(void);/p' \
 		-e 's/^(pw [a-z_0-9]+).*;$$/extern \1;/p' \
-		${.IMPSRC}; \
-	echo) > ${.TARGET}
-
-.s.ph : Makefile
-	@echo Making ${.TARGET}
-	@(echo "/* ${.IMPSRC} */"; \
-	sed -E -n \
-		-e 's/^ +\.globl +([a-z_0-9]+).*/void \1(void);/p' \
 		${.IMPSRC}; \
 	echo) > ${.TARGET}
 
