Moved names to data space, simplified dict_entry (more like how it was with orig native compiler).
Fixed some single-length math bugs - a few words were missing - and tweaked
the tty and cf code so it works again.


git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@439 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -35,16 +35,16 @@ LDFLAGS=
 COREOBJS=	kernel.o interpret.o compile.o dict.o file.o \
 			error.o time.o tty.o select.o
 
-# Different compilers: native and ITC; uncomment one of these
+# Different compile & execution engines: native and ITC
 .ifdef native
-COMPOBJ=	compile-i386.o
+ENGINE=		compile-i386.o
 CFLAGS+=	-Dnative
 .else
-COMPOBJ=	compile-itc.o
+ENGINE=		compile-itc.o
 .endif
 
 # If any of these files changes, make a new version.h
-VERSOBJS=	${COREOBJS} ${COMPOBJ}
+VERSOBJS=	${COREOBJS} ${ENGINE}
 
 ALLOBJS=	${VERSOBJS} muforth.o
 DEPFILES=	Makefile muforth.h env.h
@@ -106,7 +106,7 @@ version.h : Makefile ${VERSOBJS}
 muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -o $@ ${ALLOBJS} ${LIBS}
 
-.c.asm :
+.c.asm : Makefile muforth.h
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
 
 clean :
