Checking in my tail-call experiment, mostly to document it. I'm going to be removing this code in the next check-in; it worked, but wasn't any faster, and is useless complication. I want muforth to be simple.
I've moved some of the kernel routines that are ITC-specific to
compile-itc.c. I'm not sure where I stand on the native+ITC fusion. I'm
more interested in cleaning up the ITC code and getting the ARM code going
again.



git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@474 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -49,7 +49,7 @@ VERSOBJS=	${COREOBJS} ${ENGINE}
 ALLOBJS=	${VERSOBJS} muforth.o
 DEPFILES=	Makefile muforth.h env.h
 
-.PHONY: all clean
+.PHONY: all clean httplink diffsed
 
 all : public.h muforth
 
@@ -108,6 +108,20 @@ muforth : ${ALLOBJS} ${DEPFILES}
 
 .c.asm : Makefile muforth.h
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
+
+# put or modify links to homepage in source files
+MU4DIRS=	Test cf games lib target target/common
+httplink :
+	for f in *.c *.mu4; do sed -E -f scripts/httplink.sed $$f > $$f.sed; done
+	for d in ${MU4DIRS}; do \
+		for f in $$d/*.mu4; do \
+			sed -E -f scripts/httplink.sed $$f > $$f.sed; done; done
+
+diffsed :
+	-(for f in *.c *.mu4; do diff -u $$f $$f.sed ; done) | less
+	-(for d in ${MU4DIRS}; do \
+		for f in $$d/*.mu4; do \
+			diff -u $$f $$f.sed; done; done) | less
 
 clean :
 	rm -f muforth version.h *.o *.asm *.ph
