Added project links to each page, and update copyright dates. All pages now point to muforth page on wiki.
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@482 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -110,7 +110,7 @@ muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
 
 # put or modify links to homepage in source files
-MU4DIRS=	Test cf games lib target target/common
+MU4DIRS=	Test cf games lib target target/common target-arm
 httplink :
 	for f in *.c *.mu4; do sed -E -f scripts/httplink.sed $$f > $$f.sed; done
 	for d in ${MU4DIRS}; do \
@@ -122,6 +122,12 @@ diffsed :
 	-(for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
 			diff -u $$f $$f.sed; done; done) | less
+
+mvsed :
+	for f in *.c *.mu4; do mv -f $$f.sed $$f ; done
+	for d in ${MU4DIRS}; do \
+		for f in $$d/*.mu4; do \
+			mv -f $$f.sed $$f; done; done
 
 clean :
 	rm -f muforth version.h *.o *.asm *.ph
