--- a/Makefile.in
+++ b/Makefile.in
@@ -112,19 +112,20 @@ muforth : ${ALLOBJS} ${DEPFILES}
 # put or modify links to homepage in source files
 MU4DIRS=	Test cf games lib target target/common target-arm
 httplink :
-	for f in *.c *.mu4; do sed -E -f scripts/httplink.sed $$f > $$f.sed; done
+	for f in muforth.h *.c *.mu4; do \
+		sed -E -f scripts/httplink.sed $$f > $$f.sed; done
 	for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
 			sed -E -f scripts/httplink.sed $$f > $$f.sed; done; done
 
 diffsed :
-	-(for f in *.c *.mu4; do diff -u $$f $$f.sed ; done) | less
+	-(for f in muforth.h *.c *.mu4; do diff -u $$f $$f.sed ; done) | less
 	-(for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
 			diff -u $$f $$f.sed; done; done) | less
 
 mvsed :
-	for f in *.c *.mu4; do mv -f $$f.sed $$f ; done
+	for f in muforth.h *.c *.mu4; do mv -f $$f.sed $$f ; done
 	for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
 			mv -f $$f.sed $$f; done; done
