Better httplink sed. And forgot Makefile.in and README.
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@485 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,8 @@
 # $Id$
 #
-# This file is part of muforth.
+# This file is part of muFORTH; for project details, visit
+# 
+#    http://nimblemachines.com/browse?show=MuForth
 #
 # Copyright (c) 1997-2006 David Frech. All rights reserved, and all wrongs
 # reversed.
@@ -20,28 +22,22 @@
 # limitations under the License.
 
 ###
-### Makefile.in for muforth, a "micro" Forth
+### Makefile for muforth, a "micro" Forth
 ###
 
 VERSION=	0.03
 
 CFLAGS=		-O2 -Wall -fomit-frame-pointer
-#CFLAGS=		-g -Wall -fomit-frame-pointer -DDEBUG -DBEING_DEFINED
+#CFLAGS=	-g -Wall -fomit-frame-pointer -DDEBUG -DBEING_DEFINED
 LDFLAGS=
-
-# Configure options -- do not change this line! It must be matched by sed.
 
 # Core objects
 COREOBJS=	kernel.o interpret.o compile.o dict.o file.o \
 			error.o time.o tty.o select.o
 
 # Different compile & execution engines: native and ITC
-.ifdef native
-ENGINE=		compile-i386.o
-CFLAGS+=	-Dnative
-.else
-ENGINE=		compile-itc.o
-.endif
+ENGINE=		engine-#engine#.o
+CFLAGS+=	-D#engine#
 
 # If any of these files changes, make a new version.h
 VERSOBJS=	${COREOBJS} ${ENGINE}
@@ -110,22 +106,23 @@ muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
 
 # put or modify links to homepage in source files
+SEDFILES=	README Makefile.in muforth.h *.c *.mu4
 MU4DIRS=	Test cf games lib target target/common target-arm
 httplink :
-	for f in muforth.h *.c *.mu4; do \
+	for f in ${SEDFILES}; do \
 		sed -E -f scripts/httplink.sed $$f > $$f.sed; done
 	for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
 			sed -E -f scripts/httplink.sed $$f > $$f.sed; done; done
 
 diffsed :
-	-(for f in muforth.h *.c *.mu4; do diff -u $$f $$f.sed ; done) | less
+	-(for f in ${SEDFILES}; do diff -u $$f $$f.sed ; done) | less
 	-(for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
 			diff -u $$f $$f.sed; done; done) | less
 
 mvsed :
-	for f in muforth.h *.c *.mu4; do mv -f $$f.sed $$f ; done
+	for f in ${SEDFILES}; do mv -f $$f.sed $$f ; done
 	for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
 			mv -f $$f.sed $$f; done; done
