Ok, got the configure stuff right, finally. You can choose between itc and i386 native, but the latter won't build or run. ;-)
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@487 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -37,7 +37,7 @@ COREOBJS=	kernel.o interpret.o compile.o dict.o file.o \
 
 # Different compile & execution engines: native and ITC
 ENGINE=		engine-#engine#.o
-CFLAGS+=	-D#engine#
+CFLAGS+=	-Dengine_#engine#
 
 # If any of these files changes, make a new version.h
 VERSOBJS=	${COREOBJS} ${ENGINE}
