Ok, this is the first ITC checkin that feels like a solid clean version!! Yippee.
I've taken out cruft, I cleverly define ; in startup.mu4, I redefine the
core interpreters after the number input code (instead of hooking the
originals), etc. Lots of good stuff.

And the total number of words is smaller: 352 after loading startup. 


git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@491 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -63,7 +63,7 @@ forth_chain.h : public.h scripts/gen_dict_chain.sed
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	sed -E \
 		-e '/^void mu_compiler/d' \
-		-f scripts/gen_dict_chain.sed ${.ALLSRC} \
+		-f scripts/gen_dict_chain.sed public.h \
 	) > ${.TARGET}
 
 compiler_chain.h : public.h scripts/gen_dict_chain.sed
@@ -73,7 +73,7 @@ compiler_chain.h : public.h scripts/gen_dict_chain.sed
 		-e '/^void mu_compiler/!d' \
 		-e 's/mu_compiler_/mu_/' \
 		-f scripts/gen_dict_chain.sed \
-		-e 's/mu_/mu_compiler_/' ${.ALLSRC} \
+		-e 's/mu_/mu_compiler_/' public.h \
 	) > ${.TARGET}
 
 dict.o : forth_chain.h compiler_chain.h
