targets for making .h files, for people for whom that is difficult
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@495 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -94,7 +94,7 @@ dict.o : forth_chain.h compiler_chain.h
 env.h : envtest
 	./envtest > ${.TARGET}
 
-version.h : Makefile ${VERSOBJS}
+version.h : Makefile ${VERSOBJS:.o=.c}
 	@echo Making ${.TARGET}
 	@echo "#define VERSION \"${VERSION}\"" > version.h
 	@echo "time_t build_time = `date \"+%s\"`;" >> version.h
@@ -126,6 +126,19 @@ mvsed :
 	for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
 			mv -f $$f.sed $$f; done; done
+
+# make the files that are hard to make, eg , for people on Windows ;-)
+HFILES=		version.h public.h forth_chain.h compiler_chain.h
+hfiles : ${HFILES}
+
+# This target isn't quite right... 
+MUFORTH!=	basename ${.CURDIR}
+dist : ${HFILES}
+	(cd ..; tar cvf - \
+		--exclude .svn \
+		--exclude "*~" \
+		--exclude "*.sed" ${MUFORTH}) | \
+		gzip -9 > muforth-dist.tar.gz
 
 clean :
 	rm -f muforth version.h *.o *.asm *.ph
