dist target seems to work, but it's probably misnamed
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@496 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -131,14 +131,13 @@ mvsed :
 HFILES=		version.h public.h forth_chain.h compiler_chain.h
 hfiles : ${HFILES}
 
-# This target isn't quite right... 
 MUFORTH!=	basename ${.CURDIR}
-dist : ${HFILES}
+dist : clean ${HFILES}
 	(cd ..; tar cvf - \
 		--exclude .svn \
 		--exclude "*~" \
-		--exclude "*.sed" ${MUFORTH}) | \
-		gzip -9 > muforth-dist.tar.gz
+		--exclude "*.sed" ${MUFORTH} | \
+		gzip -9 > muforth-dist.tar.gz)
 
 clean :
 	rm -f muforth version.h *.o *.asm *.ph
