added files to clean target
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@499 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -140,7 +140,7 @@ dist : clean ${HFILES}
 		gzip -9 > muforth-dist.tar.gz)
 
 clean :
-	rm -f muforth version.h *.o *.asm *.ph
+	rm -f Makefile muforth version.h *.o *.asm *.ph env.h envtest
 	rm -f public.h forth_chain.h compiler_chain.h
 
 ### BSD start ###
