Not sure if I got it exactly right, but here is an attempt at getting a recent svn revision num into a .h file.
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@504 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -51,7 +51,7 @@ all : public.h muforth
 
 ${ALLOBJS} : ${DEPFILES}
 
-muforth.o : version.h
+muforth.o : version.h svn_rev.h
 
 public.h : ${ALLOBJS:.o=.ph}
 	@echo Making ${.TARGET}
@@ -93,6 +93,10 @@ dict.o : forth_chain.h compiler_chain.h
 
 env.h : envtest
 	./envtest > ${.TARGET}
+
+svn_rev.h : #Makefile ${VERSOBJS:.o=.c}
+	sed -E -f scripts/svn_rev.sed svn_rev.h > ${.TARGET}.sed
+	mv -f ${.TARGET}.sed ${.TARGET}
 
 version.h : Makefile ${VERSOBJS:.o=.c}
 	@echo Making ${.TARGET}
