Make svn_rev every time make is run. NOTE: this uses BSD make syntax. Need to add a sed rule to make a GNU version...
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@506 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -94,7 +94,8 @@ dict.o : forth_chain.h compiler_chain.h
 env.h : envtest
 	./envtest > ${.TARGET}
 
-svn_rev.h : #Makefile ${VERSOBJS:.o=.c}
+# need to use FORCE in gnu make...
+svn_rev.h !
 	sed -E -f scripts/svn_rev.sed svn_rev.h > ${.TARGET}.sed
 	mv -f ${.TARGET}.sed ${.TARGET}
 
