moved revision stuff into startup.mu4
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@511 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -51,7 +51,7 @@ all : public.h muforth
 
 ${ALLOBJS} : ${DEPFILES}
 
-muforth.o : version.h svn_rev.h
+muforth.o : version.h svn_revision
 
 public.h : ${ALLOBJS:.o=.ph}
 	@echo Making ${.TARGET}
@@ -94,10 +94,9 @@ dict.o : forth_chain.h compiler_chain.h
 env.h : envtest
 	./envtest > ${.TARGET}
 
-# need to use FORCE in gnu make...
-svn_rev.h !
-	sed -E -f scripts/svn_rev.sed svn_rev.h > ${.TARGET}.sed
-	mv -f ${.TARGET}.sed ${.TARGET}
+svn_revision :
+	sed -E -f scripts/svn_rev.sed startup.mu4 > startup.mu4.sed
+	cp -f startup.mu4.sed startup.mu4
 
 version.h : Makefile ${VERSOBJS:.o=.c}
 	@echo Making ${.TARGET}
