revision support is minimal: you get the rev num of startup. but I added a way to parse Id tags of loaded files... this could help
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@515 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -51,7 +51,7 @@ all : public.h muforth
 
 ${ALLOBJS} : ${DEPFILES}
 
-muforth.o : version.h svn_revision
+muforth.o : version.h
 
 public.h : ${ALLOBJS:.o=.ph}
 	@echo Making ${.TARGET}
@@ -93,10 +93,6 @@ dict.o : forth_chain.h compiler_chain.h
 
 env.h : envtest
 	./envtest > ${.TARGET}
-
-svn_revision :
-	sed -E -f scripts/svn_rev.sed startup.mu4 > startup.mu4.sed
-	cp -f startup.mu4.sed startup.mu4
 
 version.h : Makefile ${VERSOBJS:.o=.c}
 	@echo Making ${.TARGET}
