Minor cleanups so I could get my old arm tools working. Switched from using memcpy to bcopy. Fixed a bug with "uncomment" - the words it made would crash! Also moved the keymap stuff into startup and terminal and deleted keymap.mu4.
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@520 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -132,16 +132,26 @@ HFILES=		version.h public.h forth_chain.h compiler_chain.h
 hfiles : ${HFILES}
 
 MUFORTH!=	basename ${.CURDIR}
-dist : clean ${HFILES}
+distmax : clean ${HFILES}
 	(cd ..; tar cvf - \
 		--exclude .svn \
+		--exclude "*.tar.gz" \
 		--exclude "*~" \
 		--exclude "*.sed" ${MUFORTH} | \
-		gzip -9 > muforth-dist.tar.gz)
+		gzip -9 > muforth-max.tar.gz)
+
+# same as above, but without the generated .h files
+dist : clean
+	(cd ..; tar cvf - \
+		--exclude .svn \
+		--exclude "*.tar.gz" \
+		--exclude "*~" \
+		--exclude "*.sed" ${MUFORTH} | \
+		gzip -9 > muforth.tar.gz)
 
 clean :
-	rm -f Makefile muforth version.h *.o *.asm *.ph env.h envtest
-	rm -f public.h forth_chain.h compiler_chain.h
+	rm -f muforth version.h *.o *.asm *.ph env.h envtest
+	rm -f public.h forth_chain.h compiler_chain.h *.sed
 
 ### BSD start ###
 ## For merging changes in other branches into HEAD
