Added a "dists" target to Makefile, for easy pkging. scp's to grace.
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@524 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -149,6 +149,9 @@ dist : clean
 		--exclude "*.sed" ${MUFORTH} | \
 		gzip -9 > muforth.tar.gz)
 
+dists ! dist distmax
+	scp ../muforth.tar.gz ../muforth-max.tar.gz grace:/home/www/data/dev.nimblemachines.com/files/
+
 clean :
 	rm -f muforth version.h *.o *.asm *.ph env.h envtest
 	rm -f public.h forth_chain.h compiler_chain.h *.sed
