Better support for dists; removed scp from checked in version.
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@525 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -105,6 +105,19 @@ muforth : ${ALLOBJS} ${DEPFILES}
 .c.asm : Makefile muforth.h
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
 
+clean :
+	rm -f muforth version.h *.o *.asm env.h envtest
+
+distclean : clean
+	rm -f *.ph public.h forth_chain.h compiler_chain.h
+	rm -f GNUmakefile *.sed
+
+### BSD start ###
+
+#############################################################################
+## Targets for packaging things up, esp for people without sed, sh, etc.
+#############################################################################
+
 # put or modify links to homepage in source files
 SEDFILES=	README Makefile.in muforth.h *.c *.mu4
 MU4DIRS=	Test cf games lib target target/common target-arm
@@ -127,36 +140,32 @@ mvsed :
 		for f in $$d/*.mu4; do \
 			mv -f $$f.sed $$f; done; done
 
+GNUmakefile : Makefile.in
+	mv Makefile BSDmakefile
+	./configure.sh gnu
+	mv Makefile GNUmakefile
+	mv BSDmakefile Makefile
+
 # make the files that are hard to make, eg , for people on Windows ;-)
 HFILES=		version.h public.h forth_chain.h compiler_chain.h
 hfiles : ${HFILES}
 
 MUFORTH!=	basename ${.CURDIR}
-distmax : clean ${HFILES}
+distmax : distclean GNUmakefile ${HFILES}
 	(cd ..; tar cvf - \
 		--exclude .svn \
 		--exclude "*.tar.gz" \
-		--exclude "*~" \
-		--exclude "*.sed" ${MUFORTH} | \
+		--exclude "*~" ${MUFORTH} | \
 		gzip -9 > muforth-max.tar.gz)
 
 # same as above, but without the generated .h files
-dist : clean
+dist : distclean GNUmakefile
 	(cd ..; tar cvf - \
 		--exclude .svn \
 		--exclude "*.tar.gz" \
-		--exclude "*~" \
-		--exclude "*.sed" ${MUFORTH} | \
+		--exclude "*~" ${MUFORTH} | \
 		gzip -9 > muforth.tar.gz)
 
-dists ! dist distmax
-	scp ../muforth.tar.gz ../muforth-max.tar.gz grace:/home/www/data/dev.nimblemachines.com/files/
-
-clean :
-	rm -f muforth version.h *.o *.asm *.ph env.h envtest
-	rm -f public.h forth_chain.h compiler_chain.h *.sed
-
-### BSD start ###
 ## For merging changes in other branches into HEAD
 .if defined (BRANCH)
 
@@ -171,4 +180,5 @@ merge ! do_merge syncpoint
 .elif make(syncpoint) || make(do_merge) || make(merge)
 .error You need to define a source BRANCH to merge from.
 .endif
+
 ### BSD end ###
