Removed version num. Now muforth announces itself as a revision num and a date.
git-svn-id: file:///home/david/tashtego/svn/muforth/trunk@551 f1bc7e2d-46f1-0310-96be-f91141564092

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,8 +25,6 @@
 ### Makefile for muforth, a "micro" Forth
 ###
 
-VERSION=	0.03
-
 CFLAGS=		-O2 -Wall -fomit-frame-pointer
 #CFLAGS=	-g -Wall -fomit-frame-pointer -DDEBUG -DBEING_DEFINED
 LDFLAGS=
@@ -96,8 +94,7 @@ env.h : envtest
 
 version.h : Makefile ${VERSOBJS:.o=.c}
 	@echo Making ${.TARGET}
-	@echo "#define VERSION \"${VERSION}\"" > version.h
-	@echo "time_t build_time = `date \"+%s\"`;" >> version.h
+	@echo "time_t build_time = `date \"+%s\"`;" > version.h
 
 muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -o $@ ${ALLOBJS} ${LIBS}
@@ -165,6 +162,8 @@ dist : distclean GNUmakefile
 		--exclude "*.tar.gz" \
 		--exclude "*~" ${MUFORTH} | \
 		gzip -9 > muforth.tar.gz)
+
+dists ! dist distmax
 
 ## For merging changes in other branches into HEAD
 .if defined (BRANCH)
