Working AVR assembler, and a "bitbang" UART test for ATtiny45
This should be considered a "snapshot". There is cruft in lots of places to
make things work (parts of a quick & dirty target compiler hacked into the
assembler, eg) and lots of things need cleaning up. However, I wanted to
document progress and archive these bits.

What is notable is that I've written, in Forth assembler, a bitbanged UART
for the tiny45 (based on Atmel's AVR305 appnote) that talks at 115200 baud
over rs232. I'm next hoping to put a very simple bootloader-cum-debug-stub
on it, to enable interactive "tethered" development. However, before I get
there I'll likely clean up the target compiler.

Also added an "avr" target to the Makefile to enable easy flashing of parts
via avrdude.

--- a/Makefile.in
+++ b/Makefile.in
@@ -95,6 +95,13 @@ distclean : clean
 	rm -f *.ph public.h forth_chain.h compiler_chain.h
 	rm -f GNUmakefile *.sed
 
+# program avr via avrdude
+avr.img : target/AVR/loader.mu4 target/AVR/bitbang.mu4
+	./muforth -v -f target/AVR/loader.mu4 -f target/AVR/bitbang.mu4 bye
+
+avr : avr.img
+	avrdude -v -c stk500 -p t45 -P /dev/ttyS0 -U flash:w:${.IMPSRC}:r
+
 ### BSD start ###
 
 #############################################################################
