--- a/scripts/do_sed.sh.in
+++ b/scripts/do_sed.sh.in
@@ -1,11 +1,17 @@
 #!/bin/sh
 
+# fix trailing whitespace
+sed %sedext% \
+	-f scripts/whitespace.sed \
+	$1 > $1.sedded
+exit
+
 # Had to cascade because keywords.sed was interacting badly with homepage.sed.
 # Not at all clear why. Doing it this way was easier than digging around. :-(
 sed %sedext% \
 	-f scripts/homepage.sed \
 	-f scripts/copyright.sed \
-        $1 \
+	$1 \
 | sed %sedext% \
-        -f scripts/keywords.sed \
+	-f scripts/keywords.sed \
 	> $1.sedded
