Spring cleaning 2: literal and branch compilers are in Forth
I've given up on supporting both ITC and native. Or if I do still want
to do that, I'll have a flag that startup.mu4 can test, and build one or
the other. But the cruft I had to put into engine-itc.c to support the
"generic" control structures annoyed me. It's gone.

configure.sh and Makefile.in have no idea about anything other than
engine-itc.

(lit) is in C but literal is in Forth.

And I defined fig-FORTH's compile. ;-)

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,15 +16,10 @@ LDFLAGS=
 
 # Core objects
 COREOBJS=	kernel.o interpret.o compile.o dict.o file.o \
-			error.o time.o tty.o select.o
-
-# Different compile & execution engines: native and ITC. Someday the i386
-# native version might work again.
-ENGINE=		engine-%engine%.o
-CFLAGS+=	-Dengine_%engine%
+		error.o time.o tty.o select.o engine-itc.o
 
 # If any of these files changes, make a new version.h
-VERSOBJS=	${COREOBJS} ${ENGINE}
+VERSOBJS=	${COREOBJS}
 
 ALLOBJS=	${VERSOBJS} muforth.o
 DEPFILES=	Makefile muforth.h env.h
