--- a/Makefile.in
+++ b/Makefile.in
@@ -15,7 +15,7 @@ CFLAGS=		-O2 -Wall -fomit-frame-pointer
 LDFLAGS=
 
 # Core objects
-COREOBJS=	kernel.o interpret.o compile.o dict.o file.o \
+COREOBJS=	kernel.o interpret.o dict.o file.o \
 		error.o time.o tty.o select.o engine-itc.o
 
 # If any of these files changes, make a new version.h
@@ -85,9 +85,9 @@ muforth : ${ALLOBJS} ${DEPFILES}
 
 clean :
 	rm -f muforth version.h *.o *.asm env.h envtest
+	rm -f *.ph public.h forth_chain.h compiler_chain.h
 
 distclean : clean
-	rm -f *.ph public.h forth_chain.h compiler_chain.h
 	rm -f GNUmakefile *.sed
 
 # program avr via avrdude
