Added Makefile to distclean target
It seems lame to have overlooked this. distclean removes GNUmakefile
(which isn't even created!) but not the Makefile that ./configure.sh
creates. This fixes that.

--- a/Makefile.in
+++ b/Makefile.in
@@ -88,7 +88,7 @@ clean :
 	rm -f *.ph public.h forth_chain.h compiler_chain.h
 
 distclean : clean
-	rm -f GNUmakefile *.sed
+	rm -f Makefile GNUmakefile *.sed
 
 # program avr via avrdude
 avr.img : target/AVR/loader.mu4 target/AVR/bitbang.mu4
