Updated copyright to 2009, and changed homepage link
Link used to be to pages.nimblemachines.com/muforth; now it is to
sites.nimblemachines.com/muforth. I'm trying on Google Sites for size.
We'll see how it fits.

Incidentally, sed caused two unrelated whitespace changes that I thought
I might try to commit separately (mostly to practice my non-existent git
chops) but decided it wasn't worth it. Apparently sed on OSX (which is a
BSD sed) adds missing trailing newlines at the end of a file. I just
found the bit in the manpage that explains why:

"Normally, sed cyclically copies a line of input, not including its
terminating new- line character, into a pattern space, (unless there is
something left after a ``D'' function), applies all of the commands with
addresses that select that pattern space, copies the pattern space to
the standard output, appending a newline, and deletes the pattern
space."

The last line, if lacking a newline before sed ran, gets one. Which is
fine, I guess. ;-)

I found this by running

  scripts/findall.sh scripts/do_diff.sh

after running do_sed.sh in a similar fashion. diff noticed the two files
that sed had quietly changed.

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
-# This file is part of muFORTH: http://pages.nimblemachines.com/muforth
+# This file is part of muFORTH: http://sites.nimblemachines.com/muforth
 #
-# Copyright (c) 2002-2008 David Frech. All rights reserved, and all wrongs
+# Copyright (c) 2002-2009 David Frech. All rights reserved, and all wrongs
 # reversed. (See the file COPYRIGHT for details.)
 
 ###
