--- a/scripts/do_sed.sh.in
+++ b/scripts/do_sed.sh.in
@@ -1,7 +1,8 @@
 #!/bin/sh
 
-# fix trailing whitespace
+# change homepage link and update copyright date
 sed %sedext% \
+	-f scripts/homepage.sed \
 	-f scripts/copyright.sed \
 	$1 > $1.sedded
 exit
