Two tiny Makefile improvements - .asm and ${VERSOBJS}
Added .asm to SUFFIXES, so it's easy to get .asm versions of the .c
files.

Also, version.h used to depend on ${VERSOBJS:.o=.c} - the .c file names
for the list of files in VERSOBJS. This is silly. It works fine to
depend on the .o - because it depends on the .c file! So it will be
newer than version.h any time its corresponding .c file changes.

--- a/Makefile.in
+++ b/Makefile.in
@@ -60,7 +60,7 @@ compiler_chain.h : public.h scripts/gen_dict_chain.sed
 
 dict.o : forth_chain.h compiler_chain.h
 
-.SUFFIXES : .ph
+.SUFFIXES : .ph .asm
 
 .c.ph : Makefile
 	@echo Making ${.TARGET}
@@ -76,7 +76,7 @@ dict.o : forth_chain.h compiler_chain.h
 env.h : envtest
 	./envtest > ${.TARGET}
 
-version.h : Makefile ${VERSOBJS:.o=.c}
+version.h : Makefile ${VERSOBJS}
 	@echo Making ${.TARGET}
 	@echo "time_t build_time = `date \"+%s\"`;" > version.h
 
