Adding enhancements for Mac OS X.  Doesn't hinder Linux or FreeBSD builds.  But is -wrong- for non-i386 builds.  This needs to be fixed properly.  But, I'm tired of adding a line and changing two others in order to build on Mac OS X, Intel.

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,8 +10,9 @@
 # Set by configure
 SEDEXT=		%sedext%
 
-CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${DEBUG}
-LDFLAGS=
+MFLAGS=		-arch i386 -m32
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${DEBUG} ${MFLAGS}
+LDFLAGS=	${MFLAGS}
 DEFS=		-DCHUMOO
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 
