--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@
 # Set by configure
 SEDEXT=		%sedext%
 
-MFLAGS=		-arch i386 -m32
+MFLAGS=		-m32
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${DEBUG} ${MFLAGS}
 LDFLAGS=	${MFLAGS}
 DEFS=		-DCHUMOO
