Removed OSX localisations from Makefile.in
Now it's generic again.

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,9 +10,7 @@
 # Set by configure
 SEDEXT=		%sedext%
 
-MFLAGS=		-arch i386 -m32
-CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${DEBUG} ${MFLAGS}
-LDFLAGS=	${MFLAGS}
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${DEBUG}
 DEFS=		-DCHUMOO
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 
