--- a/Makefile.in
+++ b/Makefile.in
@@ -16,7 +16,8 @@ DEFS=		-DCHUMOO
 
 # Core objects
 COREOBJS=	kernel.o interpret.o dict.o file.o \
-		error.o time.o tty.o select.o engine-itc.o
+		error.o time.o tty.o select.o engine-itc.o \
+		mp-math.o
 
 # If any of these files changes, make a new version.h
 VERSOBJS=	${COREOBJS}
