Changed a $@ back to ${.TARGET}
The long BSD make names are much more readable. I've got a sed script to
convert to GNU make, so why not?

--- a/Makefile.in
+++ b/Makefile.in
@@ -80,7 +80,7 @@ version.h : Makefile ${VERSOBJS}
 	@echo "time_t build_time = `date \"+%s\"`;" > version.h
 
 muforth : ${ALLOBJS} ${DEPFILES}
-	${CC} ${LDFLAGS} -o $@ ${ALLOBJS} ${LIBS}
+	${CC} ${LDFLAGS} -o ${.TARGET} ${ALLOBJS} ${LIBS}
 
 .c.asm : Makefile muforth.h
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
