Generation of ARM image (C or binary) now a make target
Just say

  make image.c

or

  make image.bin

If necessary, muforth will be built. Also, both images depend on the ARM
metac and kernel source, so changes there should cause the image to be
remade.

I had to make all the muforth .o files depend on public.h to make this
work. Oh well.

--- a/Makefile.in
+++ b/Makefile.in
@@ -23,7 +23,7 @@ COREOBJS=	kernel.o interpret.o dict.o file.o \
 VERSOBJS=	${COREOBJS}
 
 ALLOBJS=	${VERSOBJS} muforth.o
-DEPFILES=	Makefile muforth.h env.h
+DEPFILES=	Makefile muforth.h env.h public.h
 
 .PHONY: all clean httplink diffsed
 
@@ -89,9 +89,19 @@ muforth : ${ALLOBJS} ${DEPFILES}
 clean :
 	rm -f muforth version.h *.o *.asm env.h envtest
 	rm -f *.ph public.h forth_chain.h compiler_chain.h
+	rm -f image.*
 
 distclean : clean
 	rm -f Makefile GNUmakefile *.sed
+
+# Making ARM image
+image.c : target/ARM/meta.mu4 target/ARM/kernel.mu4 muforth
+	@echo Making ARM image.c
+	./muforth -f target/ARM/load.mu4 gen-c-image bye > ${.TARGET}
+
+image.bin : target/ARM/meta.mu4 target/ARM/kernel.mu4 muforth
+	@echo Making ARM image.bin
+	./muforth -f target/ARM/load.mu4 gen-binary-image bye > ${.TARGET}
 
 # program avr via avrdude
 avr.img : target/AVR/loader.mu4 target/AVR/bitbang.mu4
