--- a/Makefile.in
+++ b/Makefile.in
@@ -97,11 +97,11 @@ distclean : clean
 # Making ARM image
 image.c : target/ARM/meta.mu4 target/ARM/kernel.mu4 muforth
 	@echo Making ARM image.c
-	./muforth -f target/ARM/load.mu4 gen-c-image bye > ${.TARGET}
+	./muforth -d debug-dot -f target/ARM/load.mu4 gen-c-image bye > ${.TARGET}
 
 image.bin : target/ARM/meta.mu4 target/ARM/kernel.mu4 muforth
 	@echo Making ARM image.bin
-	./muforth -f target/ARM/load.mu4 gen-binary-image bye > ${.TARGET}
+	./muforth -d debug-dot -f target/ARM/load.mu4 gen-binary-image bye > ${.TARGET}
 
 # program avr via avrdude
 avr.img : target/AVR/loader.mu4 target/AVR/bitbang.mu4
