configure.sh now configures for OSX
OSX builds now default to "-m32 -mdynamic-no-pic".

-m32 means muforth will build properly on 10.6.

-mdynamic-no-pic means the gcc will not build position-independent code
- saving 4k of space in the executable, and running sieve a bit faster
("time" reports real time of 3.000s vs 3.350s on my machine, and
system time 0.5s faster too).

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,8 +10,9 @@
 # Set by configure
 SEDEXT=		%sedext%
 
-CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${DEBUG}
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH} ${DEBUG}
 DEFS=		-DCHUMOO
+ARCH=		%archflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 
 # Core objects
