Improvements to 32/64 support
I wasn't sure I nailed it, and I wanted to add Linux 64-bit support too.

Also I forgot to add LDFLAGS. Now it should all work... I tried to test
under a 64-bit version of Fedora 12, but oddly it didn't have support
for building 32-bit executables! So I'm not sure that all the pieces are
in place.

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,9 +10,11 @@
 # Set by configure
 SEDEXT=		%sedext%
 
-CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH} ${DEBUG}
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
+LDFLAGS=	${ARCH_LD}
 DEFS=		-DCHUMOO
-ARCH=		%archflags%
+ARCH_C=		%archcflags%
+ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 
 # Core objects
@@ -76,6 +78,9 @@ dict.o : forth_chain.h compiler_chain.h
 
 env.h : envtest
 	./envtest > ${.TARGET}
+
+envtest : Makefile envtest.c
+	${CC} ${CFLAGS} ${LDFLAGS} -o ${.TARGET} envtest.c
 
 version.h : Makefile ${VERSOBJS}
 	@echo Making ${.TARGET}
