Time and tty support now selectable via #defines
WITH_TTY, if defined, defines the tty and termios-related words
WITH_TIME, if defined, defines the Unix epoch, local-time, utc-time, and
conversion functions; without it, the build time is captured as a
_string_ rather than as a count of seconds since the Unix big bang.

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@ SEDEXT=		%sedext%
 
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
-DEFS=		-DCHUMOO
+DEFS=		-DCHUMOO # -DWITH_TIME
 ARCH_C=		%archcflags%
 ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
@@ -85,6 +85,7 @@ envtest : Makefile envtest.c
 version.h : Makefile ${VERSOBJS}
 	@echo Making ${.TARGET}
 	@echo "time_t build_time = `date \"+%s\"`;" > version.h
+	@echo "char* build_date = \"`date \"+%Y-%b-%d %T %Z\"`\";" >> version.h
 
 muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -o ${.TARGET} ${ALLOBJS} ${LIBS}
