Support in the makefile for choosing build platforms
The choice of platform causes the definition (or not) of symbols that
guide which (optional) parts of the system get compiled.

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@ SEDEXT=		%sedext%
 
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
-DEFS=		-DCHUMOO # -DWITH_TIME
+DEFS=		-DCHUMOO ${PLAT}
 ARCH_C=		%archcflags%
 ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
@@ -28,7 +28,21 @@ VERSOBJS=	${COREOBJS}
 ALLOBJS=	${VERSOBJS} muforth.o
 DEPFILES=	Makefile muforth.h env.h public.h
 
-.PHONY: all clean httplink diffsed
+.PHONY: all clean httplink diffsed unknown nix embedded
+
+# platforms are the first targets
+unknown :
+	@echo "Please select a platform to make; compile it with \"make <platform>\""
+	@echo "Currently defined platforms:"
+	@echo "   nix embedded"
+
+# Build for Unix-like platforms
+nix :
+	${MAKE} PLAT="-DWITH_TIME -DWITH_TTY" all
+
+# Build for embedded platforms
+embedded :
+	${MAKE} all
 
 all : muforth
 
