--- a/Makefile.in
+++ b/Makefile.in
@@ -20,7 +20,7 @@ ARCH_LD=	%archldflags%
 # Core objects
 COREOBJS=	kernel.o interpret.o dict.o file.o \
 		error.o time.o tty.o select.o engine-itc.o \
-		mp-math.o
+		mp-math.o coreio.o
 
 # If any of these files changes, make a new version.h
 VERSOBJS=	${COREOBJS}
@@ -38,7 +38,8 @@ unknown :
 
 # Build for Unix-like platforms
 nix :
-	${MAKE} PLAT="-DWITH_TIME -DWITH_TTY" all
+#	${MAKE} PLAT="-DWITH_TIME -DWITH_TTY -DWITH_FS" all
+	${MAKE} PLAT="-DWITH_FS" all
 
 # Build for embedded platforms
 embedded :
