Refactored mu_parse and mu_token to share more code

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,6 +16,7 @@ DEFS=		-DCHUMOO ${PLAT}
 ARCH_C=		%archcflags%
 ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
+#DEBUG=		-DDEBUG_TOKEN
 
 # Core objects
 COREOBJS=	kernel.o interpret.o dict.o file.o \
