--- a/Makefile.in
+++ b/Makefile.in
@@ -12,41 +12,41 @@ SEDEXT=		%sedext%
 
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
-DEFS=		-DCHUMOO ${PLAT}
+DEFS=		-DCHUMOO ${PLATDEFS}
 ARCH_C=		%archcflags%
 ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG=		-DDEBUG_TOKEN
 
 # Core objects
-COREOBJS=	kernel.o interpret.o dict.o file.o \
-		error.o time.o tty.o select.o engine-itc.o \
-		mp-math.o
+COREOBJS=	kernel.o interpret.o dict.o mp-math.o engine-itc.o error.o
+		
+-include platform.mk
+
+# Platform objects
+ifeq (${MUPLAT},nix)
+PLATOBJS=	time.o tty.o select.o file.o
+PLATDEFS=	-DWITH_TIME
+endif
 
 # If any of these files changes, make a new version.h
-VERSOBJS=	${COREOBJS}
+VERSOBJS=	${COREOBJS} ${PLATOBJS}
 
 ALLOBJS=	${VERSOBJS} muforth.o
 DEPFILES=	Makefile muforth.h env.h public.h
 
-.PHONY: all clean httplink diffsed unknown nix embedded
+.PHONY: all clean httplink diffsed
 
-# platforms are the first targets
-unknown :
-	@echo "Please select a platform to make; compile it with \"make <platform>\""
-	@echo "Currently defined platforms:"
-	@echo "   nix embedded"
-
-# Build for Unix-like platforms
-nix :
-#	${MAKE} PLAT="-DWITH_TIME -DWITH_TTY -DWITH_FS" all
-	${MAKE} PLAT="-DWITH_FS" all
-
-# Build for embedded platforms
-embedded :
-	${MAKE} all
-
+ifndef MUPLAT
+all:
+	@echo "You need to define MUPLAT to build a specific platform."
+	@echo "Put the line"
+	@echo "   MUPLAT=<platform>"
+	@echo "where <platform> can be nix, embedded, or something else you"
+	@echo "define, into the file \"platform.mk\", and run make again."
+else
 all : muforth
+endif
 
 ${ALLOBJS} : ${DEPFILES}
 
