Removed public.h from DEPFILES
Now not everything gets remade every time make is run.

--- a/Makefile.in
+++ b/Makefile.in
@@ -33,7 +33,7 @@ endif
 VERSOBJS=	${COREOBJS} ${PLATOBJS}
 
 ALLOBJS=	${VERSOBJS} muforth.o
-DEPFILES=	Makefile muforth.h env.h public.h
+DEPFILES=	Makefile muforth.h env.h
 
 .PHONY: all clean httplink diffsed
 
